# flowfolio

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Caddyfile.devproxy  Caddyfile.multi  Dockerfile  README.md  compose.demo.yml  compose.dev.yml  compose.devproxy.yml  compose.multi.yml  compose.test.yml  compose.yml
backend/: Dockerfile  alembic.ini  lint-baseline.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01a_instrument_delete_cascade.py  baseline_schema.py
backend/app/: main.py
backend/app/core/: auth.py  clock.py  config.py  constants.py  database.py  db_types.py  deps.py  enums.py  http_guard.py  security.py
backend/app/middleware/: auth_middleware.py
backend/app/models/: __init__.py  account.py  apy_config.py  concentration_mute.py  fx_rate.py  instrument.py  job_runs.py  lot_alloc.py  price_quote.py  reconciliation.py  tag.py  transaction.py  txn_audit.py  user_setting.py
backend/app/routers/: _timeframe.py  accounts.py  allocation.py  apy_config.py  auth.py  closed.py  fx.py  (+16 more)
backend/scripts/: lint_ratchet.py  test_db_reset.sh
backend/tests/: _golden_expected.py  _golden_seed.py  conftest.py  test_2fa_endpoints.py  test_accrual.py  test_adjustment_lot_consumption.py  test_api_accounts.py  test_api_instruments.py  test_api_transactions.py  test_app_env_default.py  test_app_env_derivation.py  test_apy_config_router.py  test_auth.py  test_backfill_international.py  test_backfill_service.py  test_backup_job.py  test_clock.py  test_config_router.py  test_contributions_router.py  test_cost_basis.py  test_dashboard_golden_equivalence.py  test_date_cursor.py  test_decimal_serializer.py  test_decimal_storage_fidelity.py  test_demo_login.py  test_demo_reset.py  test_fifo.py  test_ft_scraper.py  test_fx_lock.py  test_fx_rate_serialization.py  test_fx_router.py  test_fx_service.py  test_golden_portfolio_fixture.py  test_http_guard.py  test_key_store.py  test_key_test.py  test_keys_router.py  test_login_2fa.py  test_login_rate_limit.py  test_migration_baseline.py  (+37 more)
(+339 files in other folders)
